[gd_scene load_steps=18 format=3 uid="uid://c4vspbkiriffj"]

[ext_resource type="Script" uid="uid://ddflld62mdulg" path="res://enemy.gd" id="1_4gyqm"]
[ext_resource type="Texture2D" uid="uid://vlimfodvo101" path="res://assets/brackeys_platformer_assets/sprites/slime_green.png" id="1_7k104"]
[ext_resource type="Texture2D" uid="uid://c41jdlvwtq2vu" path="res://Assets/Characters/Enemies and NPC/Dino/Sprites/Run/dino1.png" id="3_e1ltt"]
[ext_resource type="Texture2D" uid="uid://dc4y1m620vgdt" path="res://Assets/Characters/Enemies and NPC/Dino/Sprites/Run/dino2.png" id="4_dxifv"]
[ext_resource type="Texture2D" uid="uid://c2c4yeje5uoh0" path="res://Assets/Characters/Enemies and NPC/Dino/Sprites/Run/dino3.png" id="5_pwjut"]
[ext_resource type="Texture2D" uid="uid://c7vkfjccaewwk" path="res://Assets/Characters/Enemies and NPC/Dino/Sprites/Run/dino4.png" id="6_n0g06"]
[ext_resource type="Texture2D" uid="uid://u20thj4dwlgx" path="res://Assets/Characters/Enemies and NPC/Dino/Sprites/Run/dino5.png" id="7_ar8e5"]
[ext_resource type="Texture2D" uid="uid://bpod23jlqq60p" path="res://Assets/Characters/Enemies and NPC/Dino/Sprites/Run/dino6.png" id="8_doop2"]
[ext_resource type="Texture2D" uid="uid://by5gislwwo5fm" path="res://Assets/Characters/Enemies and NPC/Dino/Sprites/Run/dino7.png" id="9_5hcft"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7xaro"]
size = Vector2(20, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gyqm"]
atlas = ExtResource("1_7k104")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qi2p4"]
atlas = ExtResource("1_7k104")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_iifgy"]
atlas = ExtResource("1_7k104")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_epg4t"]
atlas = ExtResource("1_7k104")
region = Rect2(72, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_3yqyl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gyqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qi2p4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iifgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epg4t")
}],
"loop": true,
"name": &"Idle Walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_e1ltt")
}, {
"duration": 1.0,
"texture": ExtResource("4_dxifv")
}, {
"duration": 1.0,
"texture": ExtResource("5_pwjut")
}, {
"duration": 1.0,
"texture": ExtResource("6_n0g06")
}, {
"duration": 1.0,
"texture": ExtResource("7_ar8e5")
}, {
"duration": 1.0,
"texture": ExtResource("8_doop2")
}, {
"duration": 1.0,
"texture": ExtResource("9_5hcft")
}],
"loop": true,
"name": &"Villlain Walk",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7k104"]
size = Vector2(19, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gyqm"]
size = Vector2(19, 17)

[node name="Enemy" type="Node2D"]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(4, 247)
shape = SubResource("RectangleShape2D_7xaro")

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(1130, 262)
shape = SubResource("RectangleShape2D_7xaro")

[node name="enemy" type="CharacterBody2D" parent="."]
position = Vector2(460, 220)
collision_layer = 4
collision_mask = 4
script = ExtResource("1_4gyqm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="enemy"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_3yqyl")
animation = &"Villlain Walk"
autoplay = "Villlain Walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy"]
position = Vector2(-0.5, 4.5)
shape = SubResource("RectangleShape2D_7k104")

[node name="Area2D" type="Area2D" parent="enemy"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy/Area2D"]
texture_filter = 1
position = Vector2(-0.5, 4.5)
shape = SubResource("RectangleShape2D_4gyqm")

[connection signal="body_entered" from="Area2D" to="enemy" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="enemy" method="_on_area_2d_2_body_entered"]
[connection signal="body_entered" from="enemy/Area2D" to="enemy" method="_on_self_body_entered"]
